add Configs of products
